--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=supersecretkey
-DATABASE_URL=postgresql://user:password@localhost:5432/guestmeal
+DATABASE_URL=postgresql://postgres:postgresql@localhost:5432/clubj_guest_meal_db
